:art: Style : 다운캐스팅 타입 명시적으로 선언 및 일부 메서드의 네이밍 수정