@@ -6,11 +6,8 @@ import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.stereotype.Component;
 
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
-import java.util.Set;
-import java.util.stream.Collectors;
 
 @Component
 @NoArgsConstructor
@@ -28,15 +25,9 @@ public class CustomAuthorityUtil {
     }
 
 
-//    public static Collection<? extends GrantedAuthority> createAuthoritiesFrom(Member member) {
-//
-//        return rolesToAuthorities(member.getRoles());
-//
-//    }
-
 
     public static Collection<? extends GrantedAuthority> authorities() {
-        return Arrays.asList(new SimpleGrantedAuthority("ROLE_USER"));
+        return List.of(new SimpleGrantedAuthority("ROLE_USER"));
     }
 
 
